--- a/bridge/package.json
+++ b/bridge/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server/server.js",
-    "start:dev": "npm-run-all -p start:server:dev start:client:dev connect:bridge connect:datastore connect:configurationservice",
+    "start:dev": "npm-run-all -p start:server:dev start:client:dev connect:bridge connect:configurationservice connect:datastore connect:api",
     "start:server:dev": "nodemon server/server.js --watch server/",
     "start:client:dev": "ng build --watch",
     "ng": "ng",
@@ -15,6 +15,7 @@
     "connect:bridge": "kubectl port-forward -n keptn svc/bridge 9000:8080",
     "connect:datastore": "kubectl port-forward -n keptn-datastore svc/mongodb-datastore 8085:8080",
     "connect:configurationservice": "kubectl port-forward -n keptn svc/configuration-service 8086:8080",
+    "connect:api": "kubectl port-forward -n keptn svc/api-service 8088:8080",
     "preinstall": "npx npm-force-resolutions"
   },
   "license": "Apache-2.0",
